# xpp

robots/xpp_hyq/: CMakeLists.txt  package.xml
robots/xpp_hyq/include/xpp_hyq/: inverse_kinematics_bot.h  inverse_kinematics_laikago.h  laikaleg_inverse_kinematics.h  leg_inverse_kinematics.h  leg_inverse_kinematics_bot.h
robots/xpp_hyq/launch/: all.launch  hyq.launch  laikago.launch  quadruped.launch
robots/xpp_hyq/src/: hyqleg_inverse_kinematics.cc  inverse_kinematics_bot.cc  inverse_kinematics_laikago.cc  jointDataSaved.cpp  laikago_joints_pub.cc  laikaleg_inverse_kinematics.cc  leg_inverse_kinematics.cc  leg_inverse_kinematics_bot.cc
robots/xpp_hyq/src/exe/: urdf_visualizer_bot.cc  urdf_visualizer_hyq4.cc  urdf_visualizer_laikago.cc
robots/xpp_hyq/urdf/: quadruped_model.urdf.xacro  robot.xacro
xpp_examples/launch/: quadruped_bag.launch
xpp_examples/rviz/: xpp_quadruped.rviz
xpp_msgs/include/xpp_msgs/: topic_names.h
xpp_states/include/xpp_states/: convert.h
xpp_vis/: CMakeLists.txt
xpp_vis/include/xpp_vis/: cartesian_joint_converter.h  inverse_kinematics.h  rviz_colors.h
xpp_vis/launch/: towr_trajectory_replay.launch
xpp_vis/src/: cartesian_joint_converter.cc  rviz_robot_builder.cc  towr_trajectory_read.cc
